--- a/css/portfolio-me.css
+++ b/css/portfolio-me.css
@@ -1,4 +1,3 @@
-
 /*GENERAL CSS*/
 
 html,
@@ -6,22 +5,22 @@ body {
     width: 100%;
     height: 100%;
     color: #000;
-    font-weight: 900;
 }
 
 body {
     font-family: "Indie Flower", "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-
-h3{
-  font-size: 26px;
+h1,h2,h3{
+  font-weight: 900;
 }
 
-li{
+/*NAVBAR*/
+
+nav{
+  font-weight: 900;
   font-size: 22px;
 }
-
 
 nav .navbar{
   margin-bottom: 0;
@@ -33,84 +32,39 @@ nav .navbar{
 
 /*HEADER SECTION*/
 
-.header {
-    display: flex;
-/*    position: relative;
-*/    width: 100%;
-    height: 100%;
-    background: url(../img/cup-of-coffee-1280537.jpg) no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    align-items: flex-end;
-    justify-content: center;
-    text-align: center;
-    line-height: 0.4;
+.header{
+  background: url(../img/cup-of-coffee-1280537.jpg) no-repeat center center ;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
-header h2{
-  font-size: 4rem;
+.header-content{
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  /*border: 2px solid black;*/
 }
 
 
-
-.text-vertical-center {
-    align-items: center;
-    justify-content:center;
-    /*margin: 0 auto 0 auto;*/
-    /*background-color: #d1d1e0;
-    opacity: 0.8;*/
-    padding-bottom: 3rem;
-    color: #EBE4E4;
-    /*margin-bottom: 60px;*/
-    font-weight: 900;
-
-}
-
-.text-vertical-center h1 {
-    margin: 0;
-    padding: 0;
-    font-size: 4.5em;
-    font-weight: 900;
-}
-
-.text-vertical-center h2{
+.header-content h1, .header-content h2, .header-content h3{
   font-weight: 900;
-}
-
-.btn {
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0px;
-  font-size: 2.5rem;
-  /*font-weight: 500;*/
-  line-height: 1.42857143;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-      touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 4px;
-  background-color: rgb(224,77,44);
   color: #fff;
+  font-size: 45px;
 }
 
-#header-me{
-margin:30px;
+.header-content h1{
+  padding-bottom: 15px;
 }
+
+
 
 .icons-div{
-  /*height: 200px;*/
-  /*width: 400px;*/
-  font-size: 4rem;
+  font-size: 30px;
   margin: 30px;
   padding: 12px;
   background-color: white;
@@ -118,60 +72,65 @@ margin:30px;
   color: black;
 }
 
-a {
-  color: #000;
+.icons-div a{
+  color: black;
 }
 
-a:hover{
-  color: orange;
+/*HEADER RESPONSIVE*/
+
+@media (max-width: 502px) {
+  .header-content h1, .header-content h2, .header-content h3{
+    font-size: 32px;
+  }
+  .header{
+    height: initial;
+  }
 }
 
-/*MOBILE DEVICES*/
+@media (max-width: 365px) {
+  .header-content h1, .header-content h2, .header-content h3{
+    font-size: 26px;
+  }
 
-@media (max-width: 480px, max-height: 640px){
-  .header {
-    align-items: center;
-  }
-  .text-vertical-center h1{
-    font-size: 35px;
-    margin: 0;
-    padding: 0;
-  }
-  .text-vertical-center h2{
-    font-size: 30px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-    padding: 0;
-  }
-  .text-vertical-center #header-me{
-    margin: 30px;
-    height: 180px;
-    width: 180px;
-  }
   #header-me{
-    height: 180px;
-    width:180px;
+    width: 180px;
   }
 
   .icons-div{
-    margin-bottom: 30px;
-    font-size: 30px;
-
+    font-size: 24px;
   }
-} 
+
+}
 
 /*PORTFOLIO SECTION*/
 
 #portfolio{
   background-color: #d9d9d9;
+  font-weight: 900;
+  padding-top: 40px;
+}
+
+.portfolio-title{
+  text-align: center;
 }
 
 #portfolio .title{
   padding: 45px;
 }
 
+.wrapper{
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding-top: 40px;
+}
+
 .portfolio-item{
-  margin-bottom: 45px;
+  margin-bottom: 30px;
+  padding: 0 25px;
+  max-width: 400px;
+  display: block;
 }
 
 .portfolio-item:hover{
@@ -187,11 +146,43 @@ a:hover{
   color: #fff;
 }
 
+.portfolio-item a:visited{
+  color: #fff;
+  text-decoration: none;
+}
+
 .portfolio-caption{
-  padding-top: 5px;
- 
+  padding:20px 0;
   background-color: #de4f2d; /*ORANGE*/
 }
+
+.portfolio-caption h3{
+  margin:0;
+}
+
+.img-container{
+  position: relative;
+}
+
+.hover-description{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: inherit;
+  background-color: #d9d9d9;
+  color: black;
+  opacity:0;
+  padding: 10px;
+}
+
+.hover-description:hover{
+  opacity:.8;
+}
+
 .portfolio h3{
   margin-top: 0;
 }
@@ -200,33 +191,9 @@ a:hover{
   padding: 10px;
 }
 
-
-
-
-/*ABOUT SECTION*/
-
-.about-wrapper{
-  /*width: 80%;
-  margin: auto;*/
- /*  height: 850px;*/
-   background-color: #1C3DE6;
-   background: url(../img/wood-plant.jpg) center center no-repeat;
-   background-size: cover;
-   padding: 60px;
+.empty-img{
+  opacity: 0.1;
 }
-/*#personal{
-  float: right;
-  width: 250px;
-  height: 330px; ;
-  background: url(../img/personal.jpeg) center center no-repeat;
-  background-size: cover;
-  z-index: 100;
-}*/
-
-/*#header-me {
-  float: right;
-  clear: right;
-}*/
 
 /*ABOUT SECTION*/
 
@@ -242,9 +209,8 @@ a:hover{
   color: black;
   background-color: white;
   opacity: .8;
-  font-weight: 600;
-  padding: 3px;
-  margin: 20px 0 0 0;
+  padding: 10px;
+  margin: 0;
   border-bottom: 1px solid black;
 }
 
@@ -285,6 +251,7 @@ padding-bottom: 10px;
 .about-columns{
   display: flex;
   flex-flow: column wrap;
+  font-weight: 400;
 }
 
 .about-column-heading{
@@ -333,7 +300,7 @@ padding-bottom: 10px;
   color: black;
   background-color: white;
   opacity: .8;
-  font-weight: 600;
+  font-weight: 900;
   padding: 3px;
   border-bottom: 1px solid black;
 }
@@ -360,5 +327,75 @@ padding-bottom: 10px;
     .about-wrapper{
       padding:0;
     }
+  }
+}
+
+
+/*CONTACT SECTION*/
+
+#contact-section{
+  background-color: yellow;
+  /*height: 100vh;*/
+  padding: 25px;
+}
+
+.contact-box{
+  margin: 0 auto 0;
+  background-color: yellow;
+  /*text-align: center;*/
+  width: 500px;
+  height: 100%;
+  padding: 25px;
+}
+
+#contact-section h1{
+  text-align: center;
+}
+
+#form-box{
+  /*width:500px;*/
+  margin: 20px auto 20px;
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: 25px;
+  display: flex;
+  flex-flow: column wrap;
+  background-color: white;
+}
+
+label{
+  font-size: 22px;
+}
+
+.form-part{
+  display: flex;
+  flex-flow: column wrap;
+  padding:15px;
+}
+
+#message-box{
+  height: 100px;
+}
+
+input, textarea{
+  border: 1px solid black;
+}
+
+.submit-button{
+  font-weight: 900;
+  background-color: yellow;
+  color: black;
+}
+
+
+
+@media (max-width: 500px) {
+  .contact-box{
+    width: 90%;
+    padding: 0;
+  }
+
+  .contact-section{
+    padding: 0;
   }
 }
